--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ JWT_SECRET_KEY=secret123123
 JWT_SECRET_REFRESH_KEY=secret123123
 TOKEN_EXPIRE_TIME=1h
 TOKEN_REFRESH_EXPIRE_TIME=24h
+
+CREATE_TEST_DATA=false
