--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
-PORT=4000
+PORT=4003
 
 CRYPT_SALT=10
 JWT_SECRET_KEY=secret123123
 JWT_SECRET_REFRESH_KEY=secret123123
 TOKEN_EXPIRE_TIME=1h
 TOKEN_REFRESH_EXPIRE_TIME=24h
-
 CREATE_TEST_DATA=false
+
+POSTGRES_HOST_PORT=4005
+POSTGRES_CONTAINER_PORT=5432
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=password
+POSTGRES_DB=postgres
