--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:docker-dev": "docker-compose up --build",
+    "start:migrate": "npx prisma migrate dev && npm run start:dev",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -30,6 +31,7 @@
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
+    "@prisma/client": "^4.10.1",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -58,6 +60,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^29.3.1",
     "prettier": "^2.3.2",
+    "prisma": "^4.10.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^29.0.3",
@@ -82,5 +85,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "prisma": {
+    "schema": "db-postgres/schema.prisma"
   }
 }
