--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,18 @@ TOKEN_EXPIRE_TIME=1h
 TOKEN_REFRESH_EXPIRE_TIME=24h
 CREATE_TEST_DATA=false
 
+POSTGRES_HOST=localhost
 POSTGRES_HOST_PORT=4005
 POSTGRES_CONTAINER_PORT=5432
-POSTGRES_USER=admin
+POSTGRES_USER=lib-admin
 POSTGRES_PASSWORD=password
-POSTGRES_DB=postgres
+POSTGRES_DB=lib-db
+
+DB_CONTAINER_NAME=library-db
+APP_CONTAINER_NAME=library-app
+
+# This value uses when run prisma migrate on HOST machine
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_HOST_PORT}/${POSTGRES_DB}?schema=public"
+
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
