--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,10 @@ POSTGRES_DB=lib-db
 DB_CONTAINER_NAME=library-db
 APP_CONTAINER_NAME=library-app
 
+MAX_FILE_SIZE=10
+LOG_LEVEL=2
+ADDITIONAL_LOG_TO_CONSOLE=true
+
 # This value uses when run prisma migrate on HOST machine
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_HOST_PORT}/${POSTGRES_DB}?schema=public"
 
