feat:  jwt constants

--- a/.env.example
+++ b/.env.example
@@ -16,9 +16,12 @@ POSTGRES_DB=lib-db
 DB_CONTAINER_NAME=library-db
 APP_CONTAINER_NAME=library-app
 
-MAX_FILE_SIZE=10
-LOG_LEVEL=3
-ADDITIONAL_LOG_TO_CONSOLE=false
+MAX_FILE_SIZE=100
+LOG_LEVEL=4
+ADDITIONAL_LOG_TO_CONSOLE=true
+
+JWT_SECRET=secretFraseDontPutItToGitHub
+AUTH_TIME_LIVE=180s
 
 # This value uses when run prisma migrate on HOST machine
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_HOST_PORT}/${POSTGRES_DB}?schema=public"
